fix: page overflowing horizontally on mobile

--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -30,3 +30,8 @@
 	padding: 0;
 	box-sizing: border-box;
 }
+
+html,
+body {
+	overflow-x: hidden;
+}
